# fastapiiii

./: .gitignore  main.py  pyproject.toml
crud/: main.py
db/: __init__.py  create_table.py
src/: __init__.py  config.py
src/crud/: __init__.py  main.py
src/db/: main.py  models.py
