[project]
name = "fastapiii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "pydantic>=2.13.4",
    "pymysql>=1.2.0",
    "sqlmodel>=0.0.38",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
